--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,3 +13,29 @@ body {
 body {
   line-height: 1.6;
 }
+
+.loading-state {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 10px solid #ddd;
+  border-top-color: #4b4b4b;
+  animation: loading 1s linear infinite;
+}
+@keyframes loading {
+  to {
+    transform: rotate(360deg);
+  }
+}
