update mobile responsive

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,4 +82,11 @@ body {
   pointer-events: none;
 }
 
+@media (max-width: 400px) {
+  .navbar-text,
+  .navbar-button {
+    display: none;
+  }
+}
+
 /* DASHBOARD */
