--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,23 +34,24 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  /* background-color: rgba(0, 0, 0, 0.3); */
   z-index: 9999;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+/* HTML: <div class="loader"></div> */
 .loading {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: 10px solid #ddd;
-  border-top-color: #020707e6;
-  animation: loading 1s linear infinite;
+  width: 50px;
+  aspect-ratio: 1;
+  --_c: no-repeat radial-gradient(farthest-side, #25b09b 92%, #0000);
+  background: var(--_c) top, var(--_c) left, var(--_c) right, var(--_c) bottom;
+  background-size: 12px 12px;
+  animation: l7 1s infinite;
 }
-@keyframes loading {
+@keyframes l7 {
   to {
-    transform: rotate(360deg);
+    transform: rotate(0.5turn);
   }
 }
 
